--- a/drawing_face/index.html
+++ b/drawing_face/index.html
@@ -11,6 +11,7 @@
     <main>
       <section class="container">
         <div class="profile">
+          <div class="hair"></div>
           <div class="face">
             <div class="eye">
               <div class="inner"></div>
