--- a/mate/index.html
+++ b/mate/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
-      <section>
-        <div class="container">
+      <section class="container">
+        <div>
           <div></div>
         </div>
       </section>
